# rules_jni

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  format.sh  metadata.template.json  presubmit.yml
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: check-formatting.yml  release.yml  release_prep.sh  run-all-tests.yml  run-tests-externally.yml  run-tests-internally.yml
bzlmod/: dev_extensions.bzl  extensions.bzl  local_repository.bzl
docs/: BUILD.bazel  android.md  rules.md  targets.md  update.sh  update_docs.sh  workspace_macros.md
docs-gen/: BUILD.bazel  rules.md  workspace_macros.md
jni/: BUILD.bazel  cc_jni_library.bzl  defs.bzl  java_jni_library.bzl  jni_headers.bzl  repositories.bzl
jni/internal/: BUILD.bazel  cc_jni_library.bzl  common.bzl  coverage.bzl  java_jni_library.bzl  java_library_with_native.bzl  java_native_headers.bzl  java_native_library.bzl  jni_headers.bzl  os_cpu_utils.bzl  repositories.bzl  transitions.bzl
jni/internal/templates/: BUILD.bazel  native_library_coverage.tmpl.c  native_library_coverage.tmpl.java
jni/internal/unix/: BUILD.bazel
jni/internal/windows/: BUILD.bazel
jni/private/: BUILD.bazel  cc_jni_library.bzl  common.bzl  java_jni_library.bzl  jni_headers.bzl  os_cpu_utils.bzl  repositories.bzl  transitions.bzl
jni/private/extensions/: download_jdk_deps.bzl
jni/private/tools/libjvm_stub/: BUILD.bazel  bazel.cpp  current_java_runtime.bzl  current_repository.bzl  libjvm_stub.c
jni/private/tools/libjvm_stub/coverage/: BUILD.bazel
jni/private/tools/libjvm_stub/coverage/src/main/java/com/github/fmeum/rules_jni/libjvm_stub/: CoverageAgent.java
jni/private/tools/libjvm_stub/unix/: utils.h
jni/private/unix/: BUILD.bazel
jni/private/windows/: BUILD.bazel
jni/tools/jni_loader/: BUILD.bazel
jni/tools/jni_loader/src/main/java/com/github/fmeum/rules_jni/: OsCpuUtils.java
jni/tools/libjvm_stub/: BUILD.bazel  bazel.cpp  current_java_runtime.bzl  current_repository.bzl  libjvm_stub.c  release.c  rules_jni.h  rules_jni_internal.h  utils_unix.h  utils_windows.h
jni/tools/libjvm_stub/coverage/: BUILD.bazel
jni/tools/libjvm_stub/coverage/src/main/java/com/github/fmeum/rules_jni/libjvm_stub/: CoverageAgent.java
jni/tools/libjvm_stub/unix/: utils.h
jni/tools/libjvm_stub/windows/: utils.h
jni/tools/native_loader/: BUILD.bazel
jni/tools/native_loader/src/main/java/com/github/fmeum/rules_jni/: BUILD.bazel  CoverageHelper.java  EnvironmentUtils.java  NativeLibraryInfo.java  NoopCoverageHelper.java  OsCpuUtils.java  RulesJni.java
tests/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  init.bzl  maven.bzl  maven_install.json  repositories.bzl  verify_coverage.sh
tests/analysis/cc_jni_library/: BUILD.bazel  tests.bzl
tests/analysis/java_native_headers/: tests.bzl
tests/analysis/java_native_library/: tests.bzl
tests/analysis/jni_headers/: BUILD.bazel  tests.bzl
tests/bzlmod/: extensions.bzl
tests/jni_loader/src/test/java/com/example/: BUILD.bazel
tests/jni_loader/src/test/java/com/example/math/: BUILD.bazel
tests/jni_loader/src/test/java/com/example/os/: BUILD.bazel
tests/jni_loader/src/test/native/com/example/math/: BUILD.bazel
tests/jni_loader/src/test/native/com/example/os/: BUILD.bazel  onload.cpp
tests/jni_loader/src/test/native/com/example/os/unix/: BUILD.bazel  os.cpp
tests/libjvm_stub/: BUILD.bazel  hello_from_java.cpp  hello_from_java.h  hermetic_release_failure_test.c  libjvm_test.cpp
tests/libjvm_stub/src/test/java/com/example/: HelloFromJava.java
tests/native_loader/: BUILD.bazel
tests/native_loader/src/main/java/com/example/math/: BUILD.bazel  NativeMath.java
tests/native_loader/src/main/java/com/example/os/: BUILD.bazel  OsUtils.java
tests/native_loader/src/main/native/com/example/math/: BUILD.bazel  math.c
tests/native_loader/src/main/native/com/example/os/: BUILD.bazel  onload.cpp
tests/native_loader/src/main/native/com/example/os/unix/: BUILD.bazel
tests/native_loader/src/main/native/com/example/os/windows/: BUILD.bazel
tests/native_loader/src/test/java/com/example/: BUILD.bazel  JniLoaderTest.java
tests/native_loader/src/test/java/com/example/math/: BUILD.bazel
tests/native_loader/src/test/java/com/example/os/: BUILD.bazel
tests/native_loader/src/test/native/com/example/math/: BUILD.bazel
tests/native_loader/src/test/native/com/example/os/: BUILD.bazel
tests/native_loader/src/test/native/com/example/os/unix/: BUILD.bazel
tests/native_loader/src/test/native/com/example/os/windows/: BUILD.bazel  os.cpp
tests/unit/: BUILD.bazel  common_test.bzl
