module(
    name = "rules_jni",
    version = "0.7.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "platforms", version = "0.0.5")

download_jdk_deps = use_extension(
    "@rules_jni//bzlmod:extensions.bzl",
    "download_jdk_deps",
)
use_repo(
    download_jdk_deps,
    "com_github_openjdk_jdk_jni_h",
    "com_github_openjdk_jdk_unix_jni_md_h",
    "com_github_openjdk_jdk_windows_jni_md_h",
)
