load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_jvm_external//:defs.bzl", "javadoc")

javadoc(
    name = "native_loader",
    deps = ["//jni/tools/native_loader"],
)

stardoc(
    name = "rules",
    out = "rules_gen.md",
    input = "//jni:defs.bzl",
    deps = ["//jni:all_rules"],
)

diff_test(
    name = "rules_test",
    failure_message = "Please run:\n    bazel run //docs:update",
    file1 = "rules.md",
    file2 = "rules_gen.md",
)

stardoc(
    name = "workspace_macros",
    out = "workspace_macros_gen.md",
    input = "//jni:repositories.bzl",
    deps = ["//jni:all_rules"],
)

diff_test(
    name = "workspace_macros_test",
    failure_message = "Please run:\n    bazel run //docs:update",
    file1 = "workspace_macros.md",
    file2 = "workspace_macros_gen.md",
)

write_file(
    name = "update_script",
    out = "update.sh",
    content = [
        "#!/bin/sh",
        "cd $BUILD_WORKSPACE_DIRECTORY",
        "cp -fv bazel-bin/docs/rules_gen.md docs/rules.md",
        "cp -fv bazel-bin/docs/workspace_macros_gen.md docs/workspace_macros.md",
    ],
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":rules",
        ":workspace_macros",
    ],
)
