load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_jvm_external//:defs.bzl", "javadoc")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

javadoc(
    name = "native_loader",
    deps = ["//jni/tools/native_loader"],
)

stardoc(
    name = "rules",
    out = "rules.md",
    input = "//jni:defs.bzl",
    deps = ["//jni:all_rules"],
)

diff_test(
    name = "rules_test",
    failure_message = "Please run:\n    bazel run //docs:update",
    file1 = "rules.md",
    file2 = "//docs-gen:rules.md",
)

stardoc(
    name = "workspace_macros",
    out = "workspace_macros.md",
    input = "//jni:repositories.bzl",
    deps = ["//jni:all_rules"],
)

diff_test(
    name = "workspace_macros_test",
    failure_message = "Please run:\n    bazel run //docs:update",
    file1 = "workspace_macros.md",
    file2 = "//docs-gen:workspace_macros.md",
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":rules",
        ":workspace_macros",
    ],
)
