# Copyright 2025 Fabian Meumertzheim
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_jvm_external//:defs.bzl", "javadoc")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

javadoc(
    name = "native_loader",
    deps = ["//jni/tools/native_loader"],
)

stardoc(
    name = "rules",
    out = "rules.md",
    input = "//jni:defs.bzl",
    deps = ["//jni:all_rules"],
)

diff_test(
    name = "rules_test",
    failure_message = "Please run:\n    bazel run //docs:update",
    file1 = "rules.md",
    file2 = "//docs-gen:rules.md",
)

stardoc(
    name = "workspace_macros",
    out = "workspace_macros.md",
    input = "//jni:repositories.bzl",
    deps = ["//jni:all_rules"],
)

diff_test(
    name = "workspace_macros_test",
    failure_message = "Please run:\n    bazel run //docs:update",
    file1 = "workspace_macros.md",
    file2 = "//docs-gen:workspace_macros.md",
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":rules",
        ":workspace_macros",
    ],
)
