load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(glob(["*.bzl"]))

alias(
    name = "jni",
    actual = "//jni/internal:jni",
    applicable_licenses = ["//:jdk_license"],
    visibility = ["//visibility:public"],
)

alias(
    name = "libjvm",
    actual = "//jni/tools/libjvm_stub:libjvm_stub_with_jni",
    visibility = ["//visibility:public"],
)

alias(
    name = "libjvm_lite",
    actual = "//jni/tools/libjvm_stub:libjvm_stub_release_with_jni",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "all_rules",
    srcs = [
        "defs.bzl",
        "repositories.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//jni/internal:all_rules",
    ],
)
