load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(glob(["*.bzl"]))

alias(
    name = "jni",
    actual = "//jni/private:jni",
    applicable_licenses = ["//:jdk_license"],
    visibility = ["//visibility:public"],
)

alias(
    name = "libjvm",
    actual = "//jni/private/tools/libjvm_stub:libjvm_stub_with_jni",
    visibility = ["//visibility:public"],
)

alias(
    name = "libjvm_lite",
    actual = "//jni/private/tools/libjvm_stub:libjvm_stub_release_with_jni",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "all_rules",
    srcs = [
        "cc_jni_library.bzl",
        "defs.bzl",
        "java_jni_library.bzl",
        "jni_headers.bzl",
        "repositories.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//jni/private:all_rules",
    ],
)
