# Copyright 2025 Fabian Meumertzheim
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(glob(["*.bzl"]))

alias(
    name = "jni",
    actual = "//jni/private:jni",
    applicable_licenses = ["//:jdk_license"],
    visibility = ["//visibility:public"],
)

alias(
    name = "libjvm",
    actual = "//jni/private/tools/libjvm_stub:libjvm_stub_with_jni",
    visibility = ["//visibility:public"],
)

alias(
    name = "libjvm_lite",
    actual = "//jni/private/tools/libjvm_stub:libjvm_stub_release_with_jni",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "all_rules",
    srcs = [
        "cc_jni_library.bzl",
        "defs.bzl",
        "java_jni_library.bzl",
        "jni_headers.bzl",
        "repositories.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//jni/private:all_rules",
    ],
)
