bazel_dep(name = "rules_jni", repo_name = "fmeum_rules_jni", version = "")
local_path_override(
    module_name = "rules_jni",
    path = "..",
)

bazel_dep(name = "bazel_skylib", version = "1.0.3")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_cc", version = "0.0.1")
bazel_dep(name = "rules_java", version = "4.0.0")
bazel_dep(name = "stardoc", version = "0.5.0", repo_name = "io_bazel_stardoc")

cc_configure = use_extension(
    "@rules_cc//bzlmod:extensions.bzl",
    "cc_configure",
)
use_repo(
    cc_configure,
    "local_config_cc",
)

install_dev_dependencies = use_extension(
    "//bzlmod:extensions.bzl",
    "install_dev_dependencies",
)
use_repo(
    install_dev_dependencies,
    "rules_jvm_external",
    "junit",
    "byte_buddy_agent",
)
