bazel_dep(name = "rules_jni", version = "", repo_name = "fmeum_rules_jni")
local_path_override(
    module_name = "rules_jni",
    path = "..",
)

bazel_dep(name = "bazel_skylib", version = "1.1.1")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_java", version = "7.2.0")
bazel_dep(name = "stardoc", version = "0.5.0", repo_name = "io_bazel_stardoc")

# For the Xcode toolchain.
bazel_dep(name = "apple_support", version = "1.21.1", dev_dependency = True)

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

install_dev_dependencies = use_extension(
    "//bzlmod:extensions.bzl",
    "install_dev_dependencies",
)
use_repo(
    install_dev_dependencies,
    "junit",
)
