platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

java_test(
    name = "JniLoaderTest",
    size = "small",
    srcs = ["JniLoaderTest.java"],
    deps = [
        "//native_loader/src/test/java/com/example/math",
        "//native_loader/src/test/java/com/example/os",
        "@fmeum_rules_jni//jni/tools/native_loader",
        "@junit//jar",
    ],
)
