load("@rules_java//java:java_test.bzl", "java_test")

java_test(
    name = "JniLoaderTest",
    size = "small",
    srcs = ["JniLoaderTest.java"],
    deps = [
        "//native_loader/src/main/java/com/example/math",
        "//native_loader/src/main/java/com/example/os",
        "@fmeum_rules_jni//jni/tools/native_loader",
        "@junit//jar",
    ],
)
