load("@fmeum_rules_jni//jni:java_jni_library.bzl", "java_jni_library")

java_jni_library(
    name = "os",
    testonly = True,
    srcs = [
        "OsUtils.java",
    ],
    native_libs = [
        "//native_loader/src/main/native/com/example/os:impl/os",
    ],
    visibility = [
        "//native_loader/src/main/native/com/example/os:__subpackages__",
        "//native_loader/src/test/java/com/example:__pkg__",
    ],
)
