load("@fmeum_rules_jni//jni:cc_jni_library.bzl", "cc_jni_library")

cc_jni_library(
    name = "math",
    srcs = [
        "math.c",
    ],
    visibility = [
        "//native_loader/src/main/java/com/example/math:__pkg__",
    ],
    deps = [
        "//native_loader/src/main/java/com/example/math:math.hdrs",
    ],
)
