# Copyright 2025 Fabian Meumertzheim
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@fmeum_rules_jni//jni:cc_jni_library.bzl", "cc_jni_library")

cc_jni_library(
    name = "math",
    srcs = [
        "math.c",
    ],
    visibility = [
        "//native_loader/src/main/java/com/example/math:__pkg__",
    ],
    deps = [
        "//native_loader/src/main/java/com/example/math:math.hdrs",
    ],
)
