# Copyright 2025 Fabian Meumertzheim
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@fmeum_rules_jni//jni:cc_jni_library.bzl", "cc_jni_library")

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

cc_jni_library(
    name = "impl/os",
    testonly = True,
    srcs = [
        "onload.cpp",
    ],
    platforms = select({
        ":linux_x86_64": ["//native_loader:linux_x86_64"],
        ":macos_x86_64": ["//native_loader:macos_x86_64"],
        ":macos_arm64": ["//native_loader:macos_arm64"],
        ":windows_x86_64": ["//native_loader:windows_x86_64"],
    }),
    visibility = [
        "//native_loader/src/main/java/com/example/os:__pkg__",
        "//native_loader/src/main/native/com/example/os:__subpackages__",
    ],
    deps = select({
        "@platforms//os:windows": ["//native_loader/src/main/native/com/example/os/windows:os_impl"],
        "//conditions:default": ["//native_loader/src/main/native/com/example/os/unix:os_impl"],
    }) + [
        "//native_loader/src/main/java/com/example/os:os.hdrs",
    ],
)
