load("@fmeum_rules_jni//jni:defs.bzl", "java_library_with_native")

java_library_with_native(
    name = "math",
    srcs = [
        "NativeMath.java",
    ],
    native_libs = [
        "//native_loader/src/test/native/com/example/math",
    ],
    visibility = [
        "//native_loader/src/test/java/com/example:__pkg__",
        "//native_loader/src/test/native/com/example/math:__pkg__",
    ],
)
