load("@fmeum_rules_jni//jni:defs.bzl", "java_library_with_native")

java_library_with_native(
    name = "os",
    srcs = [
        "OsUtils.java",
    ],
    native_libs = [
        "//tests/native_loader/src/test/native/com/example/os",
    ],
    visibility = [
        "//tests/native_loader/src/test/java/com/example:__pkg__",
        "//tests/native_loader/src/test/native/com/example/os:__pkg__",
    ],
)
